--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TP'
 - !lcsh 'Wine and wine making'
+- GITenberg
 title: L'art de faire le vin avec les raisins secs
 url: http://www.gutenberg.org/ebooks/42421
